[gd_scene load_steps=16 format=2]

[ext_resource path="res://Juego/Meteoritos/MeteoritoSpawner.tscn" type="PackedScene" id=1]
[ext_resource path="res://Juego/Meteoritos/SectorMeteoritos.gd" type="Script" id=2]
[ext_resource path="res://Juego/Meteoritos/fuenteAdvertencia.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Juego/Meteoritos/alarmaSFX.ogg" type="AudioStream" id=4]

[sub_resource type="PhysicsMaterial" id=1]

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="RectangleShape2D" id=3]

[sub_resource type="RectangleShape2D" id=4]

[sub_resource type="RectangleShape2D" id=5]

[sub_resource type="RectangleShape2D" id=6]

[sub_resource type="RectangleShape2D" id=7]

[sub_resource type="RectangleShape2D" id=8]

[sub_resource type="RectangleShape2D" id=9]

[sub_resource type="DynamicFont" id=10]
size = 48
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=11]
resource_name = "advertencia"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 0.294118 ), Color( 1, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/ColorRect/Label:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/ColorRect/Label:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "audio"
tracks/4/path = NodePath("AudioStreamPlayer")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 4 )
} ],
"times": PoolRealArray( 0 )
}
tracks/5/type = "value"
tracks/5/path = NodePath("AudioStreamPlayer:volume_db")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 2.4, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, -40.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("AudioStreamPlayer:playing")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/7/type = "method"
tracks/7/path = NodePath("SpawnTimer")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 2.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ -1 ],
"method": "start"
} ]
}

[node name="SectorMeteoritos" type="Node2D"]
position = Vector2( 966.424, 539.275 )
script = ExtResource( 2 )
intervaloSpawn = 1.5

[node name="BorderNavePlayer" type="Node2D" parent="."]

[node name="BorderIzquierdo" type="StaticBody2D" parent="BorderNavePlayer"]
position = Vector2( -960, 0 )
collision_layer = 2147483648
constant_linear_velocity = Vector2( 20, 0 )
physics_material_override = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BorderNavePlayer/BorderIzquierdo"]
scale = Vector2( 1, 55 )
shape = SubResource( 2 )

[node name="BorderDerecho" type="StaticBody2D" parent="BorderNavePlayer"]
position = Vector2( 960, 0 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BorderNavePlayer/BorderDerecho"]
scale = Vector2( 1, 55 )
shape = SubResource( 3 )

[node name="BorderSuperior" type="StaticBody2D" parent="BorderNavePlayer"]
position = Vector2( 0, -540 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BorderNavePlayer/BorderSuperior"]
scale = Vector2( 95, 1 )
shape = SubResource( 4 )

[node name="BorderInferior" type="StaticBody2D" parent="BorderNavePlayer"]
position = Vector2( 0, 540 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BorderNavePlayer/BorderInferior"]
scale = Vector2( 95, 1 )
shape = SubResource( 5 )

[node name="DetectorFueraZona" type="Node2D" parent="."]

[node name="DetectorIzquierdo" type="Area2D" parent="DetectorFueraZona"]
position = Vector2( -1400, 0 )
collision_layer = 0
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectorFueraZona/DetectorIzquierdo"]
modulate = Color( 0.227451, 1, 0.0117647, 1 )
scale = Vector2( 1, 89 )
shape = SubResource( 6 )

[node name="DetectorDerecho" type="Area2D" parent="DetectorFueraZona"]
position = Vector2( 1400, 0 )
collision_layer = 0
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectorFueraZona/DetectorDerecho"]
modulate = Color( 0.227451, 1, 0.0117647, 1 )
scale = Vector2( 1, 89 )
shape = SubResource( 7 )

[node name="DetectorSuperior" type="Area2D" parent="DetectorFueraZona"]
position = Vector2( 0, -900 )
collision_layer = 2147483649
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectorFueraZona/DetectorSuperior"]
modulate = Color( 0.227451, 1, 0.0117647, 1 )
show_behind_parent = true
scale = Vector2( 141, 1 )
shape = SubResource( 8 )

[node name="DetectorInferior" type="Area2D" parent="DetectorFueraZona"]
collision_layer = 0
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectorFueraZona/DetectorInferior"]
modulate = Color( 0.227451, 1, 0.0117647, 1 )
position = Vector2( 0, 900 )
scale = Vector2( 141, 1 )
shape = SubResource( 9 )

[node name="Spawners" type="Node2D" parent="."]

[node name="MeteoritoSpawner" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -1150, 0 )
direccion = Vector2( 1, 0 )

[node name="MeteoritoSpawner2" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -1150, -360 )
direccion = Vector2( 1, 0.5 )

[node name="MeteoritoSpawner3" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -1150, -720 )

[node name="MeteoritoSpawner4" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -575, -720 )
direccion = Vector2( 0.5, 1 )

[node name="MeteoritoSpawner5" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 0, -720 )
direccion = Vector2( 0, 1 )

[node name="MeteoritoSpawner6" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 575, -720 )
direccion = Vector2( -0.5, 1 )

[node name="MeteoritoSpawner7" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 1150, -720 )
direccion = Vector2( -1, 1 )

[node name="MeteoritoSpawner8" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 1150, -360 )
direccion = Vector2( -1, 0.5 )

[node name="MeteoritoSpawner9" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 1150, 0 )
direccion = Vector2( -1, 0 )

[node name="MeteoritoSpawner10" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 1150, 360 )
direccion = Vector2( -1, -0.5 )

[node name="MeteoritoSpawner11" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 1150, 720 )
direccion = Vector2( -1, -1 )

[node name="MeteoritoSpawner12" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 575, 720 )
direccion = Vector2( -0.5, -1 )

[node name="MeteoritoSpawner13" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 0, 720 )
direccion = Vector2( 0, -1 )

[node name="MeteoritoSpawner14" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -575, 720 )
direccion = Vector2( 0.5, -1 )

[node name="MeteoritoSpawner15" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -1150, 720 )
direccion = Vector2( 1, -1 )

[node name="MeteoritoSpawner16" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -1150, 360 )
direccion = Vector2( 1, -0.5 )

[node name="Camera2D" type="Camera2D" parent="."]
visible = false

[node name="SpawnTimer" type="Timer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1000.0
margin_top = -550.874
margin_right = 1000.0
margin_bottom = 550.874
color = Color( 1, 0, 0, 0.286765 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/ColorRect"]
self_modulate = Color( 1, 1, 1, 0.975 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -522.0
margin_top = -55.5
margin_right = 522.0
margin_bottom = 55.5
custom_fonts/font = SubResource( 10 )
text = "Â¡Advertencia!
LLuvia de meteoritos inminente"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "advertencia"
anims/advertencia = SubResource( 11 )
[connection signal="timeout" from="SpawnTimer" to="." method="_on_Timer_timeout"]
